resources/css/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import "../../vendor/filament/filament/resources/css/theme.css";

@import "icons.css";
@import "widgets.css";
@import "forms.css";
@import "tables.css";
@import "modals.css";
@import "navigation.css";
@import "tree.css";

/* Login */
.split-image-layout {
    @apply bg-center bg-no-repeat bg-cover bg-[image:var(--panel-background-image)] bg-blend-multiply;
}

/* Media Library */
.fi-body:has(.top-alert) {
    
    .fi-page :not(.media-library-browser-modal) .media-library__header {
        @apply top-24 !important;
    }
}

/* Top Alert */
.fi-body {
    .top-alert.alert-dialog {
        @apply sticky top-0 z-20;

        ~ .fi-layout .fi-topbar, ~ .fi-simple-layout > .absolute {
            @apply top-10 !important;
        }

        ~ .fi-layout .content-sidebar .icon-btn, ~ .fi-layout .content-sidebar .content-sidebar_desktop {
            @apply top-28 !important;
        }
    }
}

